tests/rosetta/out/Java/abundant-odd-numbers.error
javac error: exit status 1
/tmp/TestMochiToJavaabundant-odd-numbers63444922/001/AbundantOddNumbers.java:12: error: incompatible types: int cannot be converted to String
                int j = Integer.parseInt((n / i));
                                            ^
/tmp/TestMochiToJavaabundant-odd-numbers63444922/001/AbundantOddNumbers.java:38: error: incompatible types: String cannot be converted to Number
            s = ((Number)s + ((Number)String.valueOf(xs.get(i))).doubleValue()).doubleValue() + " + ";
                         ^
/tmp/TestMochiToJavaabundant-odd-numbers63444922/001/AbundantOddNumbers.java:38: error: incompatible types: String cannot be converted to Number
            s = ((Number)s + ((Number)String.valueOf(xs.get(i))).doubleValue()).doubleValue() + " + ";
                                                    ^
/tmp/TestMochiToJavaabundant-odd-numbers63444922/001/AbundantOddNumbers.java:62: error: variable n is already defined in method abundantOdd(int,int,int,boolean)
            int tot = divs.stream().mapToInt(n -> ((Number)n).intValue()).sum();
                                             ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
4 errors
